# Vision

3DC/: .gitignore  CMakeLists.txt  config_file_dox  hierarchy.cpp
3DC/html/: index.html
3DC/html/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _first_layer_8cpp.html  _first_layer_8h.html  _first_layer_8h_source.html  annotated.html  class_first_layer-members.html  class_first_layer.html  classes.html  dir_039f7f80b0d35810b252d8bfc08d1507.html  dir_0d2494800f393afdf1f5840c598e0f93.html  dir_4d377fd1a8b2e210133035a2d82bcd40.html  dir_5cc467d36e9e004b9668b0f3b33b0a20.html  dir_5e6ed3a59c5e808be46225a054266e10.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6abceee7e3e23e11853c5bfcfba42cec.html  dir_817cecab6475501ee514a66a9af6a7ed.html  dir_ca898bb59252e2829f08c78883f21ed0.html  dir_eef8a871a22f2dbd4e736f67928c4a8d.html  dynsections_8js.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  hierarchy_8cpp.html  index.html  jquery_8js.html  search_8js.html
3DC/html/latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _first_layer_8cpp.tex  _first_layer_8h.tex  annotated.tex  class_first_layer.tex  dir_039f7f80b0d35810b252d8bfc08d1507.tex  dir_0d2494800f393afdf1f5840c598e0f93.tex  files.tex  (+10 more)
3DC/include/: FirstLayer.h
3DC/latex/: refman.tex
3DC/simple_objects_ROI/: my_cone.txt  my_cube.txt  my_cylinder.txt  my_marmelade.txt  my_monkey.txt  my_mug.txt  my_paste.txt  my_sphere.txt  my_torus.txt
3DC/src/: FirstLayer.cpp
(+1473 files in other folders)
