CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

SET( PROJ_NAME      "Full3DHierarchy" )
SET( PROJ_PATH      ${CMAKE_SOURCE_DIR} )
SET( PROJ_OUT_PATH  ${CMAKE_BINARY_DIR} )
#header files added to sources to display include files in QtCreator
SET( PROJ_SOURCES   "hierarchy.cpp" "src/FirstLayer.cpp" "include/FirstLayer.h")
SET( PROJ_HEADERS   "FirstLayer.h")
SET( PROJ_LIBRARIES "" )
SET( PROJ_INCLUDES  "include" )

PROJECT( ${PROJ_NAME} )

FIND_PACKAGE(OpenMP)
IF (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
ENDIF()
FIND_PACKAGE( OpenCV REQUIRED )
FIND_PACKAGE( Boost 1.54 COMPONENTS system filesystem REQUIRED )
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES( ${PROJ_INCLUDES} )
SET(CMAKE_CXX_FLAGS "-std=c++11 -pthread")
ADD_EXECUTABLE(${PROJ_NAME} ${PROJ_SOURCES})
TARGET_LINK_LIBRARIES( ${PROJ_NAME} ${PROJ_LIBRARIES} ${OpenCV_LIBS} ${Boost_LIBRARIES})

